--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,6 +15,7 @@ jobs:
       - uses: mlugg/setup-zig@v1
         with:
           version: 0.14.0
+      - run: zig build
       - run: zig build test
       - run: zig build testnet
   lint:
